# russell

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.Arch  Dockerfile.Rocky  Dockerfile.Ubuntu.Mumps  LICENSE  README.md  case-a-openblas-debian.bash  case-a-openblas-local-libs.bash  case-b-intel-mkl-local-libs.bash  nvidia-cudss.md  windows.md
russell_chk/: Cargo.toml  README.md
russell_chk/examples/: ex01.rs
russell_chk/src/: approx_eq.rs  assert_approx_eq.rs  assert_complex_approx_eq.rs  assert_complex_vec_approx_eq.rs  assert_deriv_approx_eq.rs  assert_vec_approx_eq.rs  central_deriv.rs  complex_approx_eq.rs  complex_vec_approx_eq.rs  deriv_approx_eq.rs  lib.rs  num_deriv.rs  vec_approx_eq.rs
russell_lab/: Cargo.toml  README.md  build.rs
russell_lab/benches/: add_vectors.rs  algo_chebyshev.rs  fft_benchmark.rs  lab_benches.rs  matvec_benchmark.rs
russell_lab/c_code/: constants.h  interface_blas.c  interface_fftw.c  math_functions.c
russell_lab/examples/: algo_interp_chebyshev.rs  algo_interp_chebyshev_adapt.rs  algo_interp_chebyshev_data.rs  algo_interp_chebyshev_noisy_data.rs  algo_interp_lagrange.rs  algo_interp_multiple_roots.rs  algo_interpolation_lagrange.rs  algo_line_search.rs  algo_linear_fitting.rs  algo_lorene_1d_pde_spectral_collocation.rs  algo_lorene_1d_pde_spectral_errors.rs  algo_min_and_root_solver_brent.rs  algo_min_bracketing_and_solver.rs  algo_min_solver_brent.rs  algo_multi_root_solver_cheby.rs  algo_newton_solver.rs  algo_numerical_jacobian.rs  algo_quadrature_integrate_1d.rs  algo_root_finding_chebyshev.rs  asm01.rs  base_auxiliary_blas.rs  base_read_data.rs  base_read_table.rs  base_sort_small_tuples.rs  check_1st_and_2nd_derivatives.rs  complex_linear_system_solution_1.rs  complex_linear_system_solution_2.rs  complex_matrix_multiplication.rs  complex_matrix_norms.rs  doc_mat_cholesky.rs  eigenvalues_symmetric_3x3.rs  ex01.rs  ex_complex_linear_system_solution_1.rs  ex_complex_linear_system_solution_1.rsa  ex_complex_linear_system_solution_2.rs  ex_complex_matrix_multiplication.rs  ex_complex_matrix_norms.rs  ex_linear_system_solution.rs  ex_matrix_cholesky.rs  ex_matrix_eigenvalues.rs  (+38 more)
russell_lab/src/: add_arrays.rs  as_array.rs  auxiliary_and_constants.rs  constants.rs  enums.rs  fftw.rs  formatters.rs  generators.rs  lib.rs  linear_fitting.rs  linspace.rs  matrix.rs  operations.rs  prelude.rs  read_table.rs  simd_operations.rs  sort.rs  sort_vec_mat.rs  stopwatch.rs  testing.rs  vector.rs
russell_lab/tests/: more_tests_bessel_functions.rs  more_tests_elliptic_functions.rs  test_bessel_functions.rs  test_elliptic_functions.rs  test_lin_sys.rs  test_math.rs  test_matvec.rs  test_ops.rs
russell_lab/zscripts/: benchmark.bash  memcheck.bash  run-cargo-asm.bash  run-examples.bash  test-with-intel-mkl.bash
russell_nonlin/: Cargo.toml  README.md
russell_nonlin/data/: ref-bratu-1d-shahab-2025.txt  ref-bratu-2d-shahab-2025.txt
russell_nonlin/examples/: arclength_bspline.rs
russell_nonlin/src/: arclength_solver.rs  config.rs  delta_lambda.rs  enums.rs  iteration_error.rs  lib.rs  logger.rs  nl_params.rs  nl_solver.rs  nl_solver_trait.rs  nl_state.rs  nl_system.rs  nonlin_solver.rs  num_error.rs  output.rs  parametric_solver.rs  prelude.rs  samples.rs  solver.rs  solver_arclength.rs  solver_natural.rs  solver_parametric.rs  solver_simple.rs  solver_trait.rs  state.rs  stats.rs  system.rs  workspace.rs
russell_nonlin/tests/: test_arc_bspline_1.rs  test_arc_bspline_2.rs  test_arc_circle.rs  test_arc_hardening_softening_model.rs  test_arc_linear_problem.rs  test_arc_one_eq_with_fold.rs  test_arc_single_eq_with_fold.rs  test_arc_singular_initial_state.rs  test_bratu_1d_fem.rs  test_bratu_1d_lmm.rs  test_bratu_2d.rs  test_bratu_2d_lmm.rs  test_bratu_problem.rs  test_circle.rs  test_hardening_softening_model.rs  test_linear_problem.rs  test_multiple_calls_to_solve.rs  test_multithreaded.rs  test_multithreaded.rsa  test_new_bratu_2d.rs  test_new_bratu_2d_lmm.rs  test_newton_problems.rs  test_newton_problems_auto.rs  test_reaction_diffusion_1d.rs  test_reaction_diffusion_2d.rs  test_simple.rs
russell_nonlin/zscripts/: run-logging-tests.bash
russell_ode/: Cargo.toml  README.md
russell_ode/data/: diff_radau5_hairer_wanner_eq1.txt  diff_radau5_hairer_wanner_eq1_dense.txt  diff_radau5_van_der_pol.txt  diff_radau5_van_der_pol_dense.txt  fortran_dop853_van_der_pol_debug.txt  fortran_dopri5_arenstorf.txt  fortran_dopri5_arenstorf_debug.txt  fortran_dopri5_hairer_wanner_eq1.txt  fortran_dopri5_van_der_pol_debug.txt  fortran_radau5_amplifier.txt  fortran_radau5_amplifier1t.txt  fortran_radau5_amplifier_debug.txt  fortran_radau5_hairer_wanner_eq1.txt  fortran_radau5_hairer_wanner_eq1_debug.txt  fortran_radau5_hairer_wanner_eq1_dense.txt  fortran_radau5_robertson_small_h.txt  fortran_radau5_van_der_pol.txt  fortran_radau5_van_der_pol_debug.txt  fortran_radau5_van_der_pol_dense.txt  log_test_radau5_hairer_wanner_eq1.txt  log_test_radau5_hairer_wanner_eq1_dense.txt  log_test_radau5_van_der_pol.txt  log_test_radau5_van_der_pol_dense.txt  russell_dopri5_arenstorf.txt  russell_dopri5_arenstorf_debug.txt  russell_dopri5_hairer_wanner_eq1.txt  russell_dopri5_van_der_pol_debug.txt  russell_dopri8_van_der_pol.txt  russell_dopri8_van_der_pol_debug.txt  russell_radau5_amplifier2t.txt  russell_radau5_amplifier2t_debug.txt  russell_radau5_hairer_wanner_eq1.txt  russell_radau5_hairer_wanner_eq1_debug.txt  russell_radau5_hairer_wanner_eq1_dense.txt  russell_radau5_robertson.txt  russell_radau5_robertson_debug.txt  russell_radau5_robertson_small_h.txt  russell_radau5_van_der_pol.txt  russell_radau5_van_der_pol_debug.txt  russell_radau5_van_der_pol_dense.txt
russell_openblas/: Cargo.toml  README.md  build.rs
russell_pde/: Cargo.toml  README.md
russell_sparse/: Cargo.toml  README.md  architecture-cudss.md  architecture-klu.md  architecture-umfpack.md  build.rs  c_code.c  mumps-architecture.md  run_mem_check.bash  wrapper.cpp
russell_stat/: Cargo.toml  README.md  build.rs  run_examples.bash
russell_tensor/: Cargo.toml  README.md
zcoverage/: Cargo.toml
(+836 files in other folders)
