[package]
name = "russell_chk"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Functions to check vectors and other data in tests"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_chk"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["testing", "arrays", "float"]

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
