[package]
name = "russell_lab"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "Matrix-vector laboratory including linear algebra tools"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_lab"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["matrix", "vector", "linspace"]

[dependencies]
criterion = "0.5"
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rmp-serde = "1.1"
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "lab_benches"
harness = false
