[package]
name = "russell_lab"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Scientific lab with special math functions, linear algebra, interpolation, quadrature, num derivation"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_lab"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["matrix", "vector", "linspace"]

[features]
intel_mkl = []

[dependencies]
criterion = "0.5"
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
plotpy = "0.6"
serde_json = "1.0"
serial_test = "3.0"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "lab_benches"
harness = false
