[package]
name = "russell_lab"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Scientific laboratory for linear algebra and numerical mathematics"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_lab"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["matrix", "vector", "linspace"]

[features]
intel_mkl = []

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
plotpy = "0.6"
serde_json = "1.0"
serial_test = "3.0"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "matvec_benchmark"
harness = false
