[package]
name = "russell_nonlin"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Numerical continuation methods to solve nonlinear systems of equations"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_nonlin"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["numerical", "solver", "continuation", "nonlinear"]

[features]
intel_mkl = [
  "russell_lab/intel_mkl",
  "russell_sparse/intel_mkl",
  "ctm_demo/intel_mkl",
]
local_sparse = ["russell_sparse/local_sparse", "ctm_demo/local_suitesparse"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "2" }
russell_sparse = { path = "../russell_sparse", version = "2" }
russell_stat = { path = "../russell_stat", version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
ctm_demo = "0.2"
russell_pde = { path = "../russell_pde", version = "2" }
russell_ode = "1.10"
plotpy = "1.21"
rayon = "1.10"
serial_test = "3.2"
