[package]
name = "russell_nonlin"
version = "2.7.0"
edition = "2024"
license = "MIT"
description = "Numerical continuation methods to solve nonlinear systems of equations"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_nonlin"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["numerical", "solver", "continuation", "nonlinear"]

[features]
intel_mkl = [
  "russell_lab/intel_mkl",
  "russell_sparse/intel_mkl",
  "russell_ode/intel_mkl",
]
local_sparse = ["russell_sparse/local_sparse", "russell_ode/local_sparse"]
cudss = ["russell_sparse/cudss"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "2" }
russell_sparse = { path = "../russell_sparse", version = "2" }
russell_stat = { path = "../russell_stat", version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
russell_pde = { path = "../russell_pde", version = "2" }
russell_ode = { path = "../russell_ode", version = "2" }
plotpy = "1.23"
rayon = "1.10"
serial_test = "3.2"
