[package]
name = "russell_ode"
version = "1.5.0"
edition = "2021"
license = "MIT"
description = "Solvers for ordinary differential equations and differential algebraic equations"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_ode"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["differential", "numerical", "solver"]

[features]
intel_mkl = ["russell_lab/intel_mkl", "russell_sparse/intel_mkl"]
local_suitesparse = ["russell_sparse/local_suitesparse"]
with_mumps = ["russell_sparse/with_mumps"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "1.0.0" }
russell_sparse = { path = "../russell_sparse", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
plotpy = "0.6"
serial_test = "3.0"
