[package]
name = "russell_openblas"
version = "0.1.3"
edition = "2018"
license = "MIT"
description = "Thin wrapper to some OpenBLAS routines"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_openblas"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["matrix", "vector", "eigenvalues", "decomposition"]

[dependencies]
russell_chk = { path = "../russell_chk", version = "0.1" }
criterion = "0.3"

[[bench]]
name = "openblas_benches"
harness = false
