[package]
name = "russell_pde"
version = "2.8.0"
edition = "2024"
license = "MIT"
description = "Essential tools to solve partial differential equations; not a full-fledged PDE solver"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_pde"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["partial", "differential", "tools"]

[features]
intel_mkl = ["russell_lab/intel_mkl", "russell_sparse/intel_mkl"]
local_sparse = ["russell_sparse/local_sparse"]
cudss = ["russell_sparse/cudss"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "2" }
russell_sparse = { path = "../russell_sparse", version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
plotpy = "1.23"
rayon = "1.10"
serial_test = "3.5"
