[package]
name = "russell_sparse"
version = "1.10.0"
edition = "2021"
license = "MIT"
description = "Solvers for large sparse linear systems (wraps MUMPS and UMFPACK)"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_sparse"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["matrix", "sparse", "solver"]

[features]
intel_mkl = ["russell_lab/intel_mkl"]
local_suitesparse = []
with_mumps = []

[dependencies]
num-traits = "0.2"  # Latest stable is 0.2.18
russell_lab = { path = "../russell_lab", version = "1.10.0" }
structopt = "0.3"  # Latest stable is 0.3.26
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "3.2"  # Latest stable is 3.2.0

[build-dependencies]
cc = "1.0"  # Latest stable is 1.0.90
