[package]
name = "russell_sparse"
version = "2.7.0"
edition = "2024"
license = "MIT"
description = "Sparse matrix calculations and solvers for linear systems"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_sparse"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["matrix", "sparse", "solver"]

[features]
cudss = []
intel_mkl = ["russell_lab/intel_mkl"]
local_sparse = []

[dependencies]
num-traits = "0.2"
russell_lab = { path = "../russell_lab", version = "2" }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "3.2"

[build-dependencies]
cc = "1.2"
