[package]
name = "russell_stat"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Statistics calculations, probability distributions, and pseudo random numbers"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_stat"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["statistics", "probability", "random", "numerical"]

[features]
intel_mkl = ["russell_lab/intel_mkl"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "0.8.0" }
num-traits = "0.2"
rand = "0.8.5"
rand_distr = "0.4.3"
