[package]
name = "russell_stat"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Statistics calculations and (engineering) probability distributions"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_stat"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["statistics", "probability", "random", "numerical"]

[features]
intel_mkl = ["russell_lab/intel_mkl"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "2" }
num-traits = "0.2"
rand = "0.10"
rand_distr = "0.6"

[dev-dependencies]
plotpy = "1.23"
