[package]
name = "russell_tensor"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Tensor analysis structures and functions for continuum mechanics"
homepage = "https://github.com/cpmech/russell"
repository = "https://github.com/cpmech/russell"
documentation = "https://docs.rs/russell_tensor"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["tensor", "Voigt", "Mandel", "continuum", "mechanics"]

[features]
intel_mkl = ["russell_lab/intel_mkl"]

[dependencies]
russell_lab = { path = "../russell_lab", version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
