[package]
name = "zcoverage"
version = "0.1.0"
edition = "2021"

[dependencies]
russell_chk = { path = "../russell_chk", version = "*" }
russell_lab = { path = "../russell_lab", version = "*" }
russell_openblas = { path = "../russell_openblas", version = "*" }
russell_sparse = { path = "../russell_sparse", version = "*" }
russell_stat = { path = "../russell_stat", version = "*" }
russell_tensor = { path = "../russell_tensor", version = "*" }
